feat(server): add allowed requested token types